// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`call to action snapshot Call to action: 0 1`] = `
<a
  className="button-0-1-20 button_primary-0-1-21 callToAction-0-1-7 callToAction__primary-0-1-9"
  data-sketch-symbol="Call to action - primary"
  href="https://www.microsoft.com/en-us/"
>
  <span
    className="button_span-0-1-25"
  >
    Primary call to action
  </span>
  <div
    className="callToAction_glyph-0-1-8"
    dangerouslySetInnerHTML={
      Object {
        "__html": "<svg xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"-4014.4 1616.998 4.4 8\\">
    <g transform=\\"translate(-4128 1600.698)\\">
        <path d=\\"M140.6,23.9l3.7-3.6-3.7-3.6.4-.4,4,4-4,4Z\\" transform=\\"translate(-27)\\"/>
    </g>
</svg>",
      }
    }
    slot="after"
  />
</a>
`;

exports[`call to action snapshot Call to action: 1 1`] = `
<a
  className="button-0-1-46 button_lightweight-0-1-49 callToAction-0-1-33 callToAction__lightweight-0-1-36"
  data-sketch-symbol="Call to action - lightweight"
  href="https://www.microsoft.com/en-us/"
>
  <span
    className="button_span-0-1-51"
  >
    Lightweight call to action
  </span>
  <div
    className="callToAction_glyph-0-1-34"
    dangerouslySetInnerHTML={
      Object {
        "__html": "<svg xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"-4014.4 1616.998 4.4 8\\">
    <g transform=\\"translate(-4128 1600.698)\\">
        <path d=\\"M140.6,23.9l3.7-3.6-3.7-3.6.4-.4,4,4-4,4Z\\" transform=\\"translate(-27)\\"/>
    </g>
</svg>",
      }
    }
    slot="after"
  />
</a>
`;

exports[`call to action snapshot Call to action: 2 1`] = `
<a
  className="button-0-1-72 button_justified-0-1-76 callToAction-0-1-59 callToAction__justified-0-1-63"
  data-sketch-symbol="Call to action - justified"
  href="https://www.microsoft.com/en-us/"
>
  <span
    className="button_span-0-1-77"
  >
    Secondary call to action
  </span>
  <div
    className="callToAction_glyph-0-1-60"
    dangerouslySetInnerHTML={
      Object {
        "__html": "<svg xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"-4014.4 1616.998 4.4 8\\">
    <g transform=\\"translate(-4128 1600.698)\\">
        <path d=\\"M140.6,23.9l3.7-3.6-3.7-3.6.4-.4,4,4-4,4Z\\" transform=\\"translate(-27)\\"/>
    </g>
</svg>",
      }
    }
    slot="after"
  />
</a>
`;
